Remove unnecessary template parameters; method fit() in place of countVotes()